sonicadv_int initial translation done

--- a/japan.html
+++ b/japan.html
@@ -8,11 +8,11 @@
 <h1 align="center">Translated Japanese Sonic Sites</h1>
 <a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="200" alt="Sonic 3D: Flickies' Island"></a>
 <a href="japan/sonicjam" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicjam.png" width="320" height="200" alt="Sonic Jam"></a>
-<!--<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="200" alt="Sonic R"></a>
-<a href="japan/sonicadv" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv.png" width="320" height="200" alt="Sonic Adventure"></a>
+<!--<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="200" alt="Sonic R"></a>-->
+<!--<a href="japan/sonicadv" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv.png" width="320" height="200" alt="Sonic Adventure"></a>-->
 <a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.png" width="320" height="200" alt="Sonic Adventure International"></a>
-<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="200" alt="Sonic Adventure 2"></a>
-<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="200" alt="Sonic Advance"></a>-->
+<!--<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="200" alt="Sonic Adventure 2"></a>
+<!--<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="200" alt="Sonic Advance"></a>-->
 <h2 align="center">Credits</h2>
 <p align="center">Translation: KrazeeTobi
 <br>Text Revision: KrazeeTobi
