--- a/japan/sonicadv_int/index.html
+++ b/japan/sonicadv_int/index.html
@@ -5,7 +5,7 @@
 
   <table width="640" align="center">
     <tr><td align="center" colspan=2 bgcolor="#ff0000" height=32><font size=4 color="#ffffff"><b>
-『SONIC ADVENTURE International』
+SONIC ADVENTURE International
 </b></font></td></tr></table>
 
 <center>
@@ -17,62 +17,61 @@
   </center>
   <tr>
     <td height=60 colspan=2> 
-      <div align="center"><font color="#ff0000" size="2"> 『ソニックアドベンチャー・インターナショナル』<br>
-        発売日：1999年10月14日 <blink><b>発売中！</b><br>
-        価格：\5,800（税込 \6,090）</font><font size="2"><br>
+      <div align="center"><font color="#ff0000" size="2">Sonic Adventure International<br>
+        Release date: October 14, 1999 <blink><b>Now on sale!</b><br>
+        Price: 5,800 yen (6,090 yen including tax)</font><font size="2"><br>
         </font></div>
       <P align="center"> <font size="2"><a href="http://segadirect.jp/" target="_blank"> 
         <img src="sadv_int_image/segadirect.gif" width="100" height="56" border="0"></a><br>
         <a href="http://segadirect.jp/" target="_blank"> <font color="#ff0000"><blink> 
-        通信販売 『セガ ダイレクト』にても購入可能！ </blink></font></a><br>
+        Can also be purchased through mail oder on Sega Direct!</blink></font></a><br>
         </font>
-      <P align="center"> <font color="#0000ff" font="font" size="2"><I><B>キミかも！？ 
-        世界で一番速いヤツ！</B></I></font><font size="2"><br>
+      <P align="center"> <font color="#0000ff" font="font" size="2"><I><B>It could be you! The fastest guy in the world!</B></I></font><font size="2"><br>
         </font>
-      <P align="center"><font size="2"> 『SONIC ADVENTURE』から８か月…。<br>
-        今、ソニックチームは４本の作品を発表する。<br>
-        ４作品はそれぞれに、中裕司およびソニックチームの思想を反映したものとなっている。<br>
-        その発表第一弾となるのは、あの『SONIC ADVENTURE』の全世界対応版、<br>
-        "世界中のみんなが参加できる"『SONIC ADVENTURE International』だ！<br>
+      <P align="center"><font size="2">Eight months after Sonic Adventure...<br>
+        Now, Sonic Team will be presenting four films.<br>
+        Each of the four works reflects the ideas of Yuji Naka and the Sonic Team.<br>
+        The first to be announced is Sonic Adventure International,<br>
+        a worldwide version of Sonic Adventure that will allow everyone in the world to participate!<br>
         </font>
-      <p align="center"> <font color="#ff0000" font="font" size="2"><BLINK>ソニックチームＵＳＡ始動！</BLINK></font><font size="2"><br>
-        『SONIC ADVENTURE』終了後から「海外版」として密かに進行していたこの企画。<br>
-        海外対応をするからには、海外の風を感じたい！…とばかり、開発スタッフは日本を飛び出した！<br>
-        アメリカはサンフランシスコに場所を移して開発を開始したのだ！<br>
-        『SONIC ADVENTURE International』は、サンフランシスコ発！<br>
-        全世界のみんなに送る、世界標準の『SONIC ADVENTURE』だ！！<br>
+      <p align="center"> <font color="#ff0000" font="font" size="2"><BLINK>Sonic Team USA is on!</BLINK></font><font size="2"><br>
+        This project has been in progress secretly as an "overseas version" since the end of Sonic Adventure's development.<br>
+        We want to feel the wind of foreign countries!... so the development team flew out of Japan!<br>
+        The U.S. moved the location to San Francisco to begin development!<br>
+        Sonic Adventure International is a new game from San Francisco!<br>
+        It's a global standard edition of Sonic Adventure for everyone in the world!<br>
         </font>
       <p align="center"> 
       <hr width=70% align="center">
       <p align="center"> 
       <div align="center">
         <table width="500">
-          <font color="#0000ff" font="font" size="2">■ ２ヶ国語音声 ＆ ５ヶ国語字幕対応 ■</font><br>
+          <font color="#0000ff" font="font" size="2">Bilingual audio and subtitled in five languages</font><br>
           <OL>
-            <font size="2"> ソニック達の声もクールな英語が選べるぞ！（日本語・英語から選択）<br>
-            字幕も５ヶ国語から選択可能だ！（日本語、英語、フランス語、ドイツ語、スペイン語）<br>
+            <font size="2">You can also choose cool English voices for Sonic and his friends! (Choose from Japanese or English)<br>
+            You can also choose from five different subtitled! (Japanese, English, French, German, and Spanish)<br>
             </font>
           </OL>
-          <p> <font color="#0000ff" font="font" size="2">■ ワールドランキング ■</font><font size="2"><br>
+          <p> <font color="#0000ff" font="font" size="2">World Ranking</font><font size="2"><br>
             </font>
           <OL>
-            <font color="#ff0000" font="font" size="2"><BLINK> 世界選手権対応！</BLINK></font><font size="2"><br>
-            「全世界」で誰が最速かをインターネットで競うことができるぞ！<br>
-            もちろんネットワークでランキング発表だ！<br>
+            <font color="#ff0000" font="font" size="2"><BLINK>World Championships ready!</BLINK></font><font size="2"><br>
+            You can compete on the Internet to see who's the fastest in the whole world!<br>
+            Of course, the network will announce the ranking!<br>
             </font>
           </OL>
-          <p> <font color="#0000ff" font="font" size="2">■ その他のパワーアップ！ ■</font><font size="2"><br>
+          <p> <font color="#0000ff" font="font" size="2">Other power-ups! Other power-ups!</font><font size="2"><br>
             </font>
           <OL>
-            <LI><font size="2">エンブレムリスト表示　→全130個のエンブレム取得状態がリストでわかる！<br>
+            <LI><font size="2">Emblem list display -> You can see the status of all 130 emblems acquired in the list!<br>
               </font>
-            <LI><font size="2">カジノステージ・ピンボール面での残りダマ数表示<br>
+            <LI><font size="2">Display of the number of rings remaining in the casino stage and pinball surface<br>
               </font>
-            <LI><font size="2">カートゲームでのLAPタイム、目標タイム表示<br>
+            <LI><font size="2">LAP time and target time display in karting games<br>
               </font>
-            <LI><font size="2">カート大会（全6コース）開催予定<br>
+            <LI><font size="2">Karting competition (6 courses in total) to be held<br>
               </font>
-            <LI><font size="2">音声の追加（環境音声、待機音声）で臨場感ＵＰ!<br>
+            <LI><font size="2">Additional audio (environmental audio, standby audio) increases the sense of realism!<br>
               </font>
           </OL>
           <p> 
@@ -87,16 +86,16 @@
         <td width="320"><img src="04.jpg"></td>
       </tr>
       <tr> 
-        <td width="320"><font size=2>英語で生まれ変わったソニックを是非体験してくれ！</font></td>
-        <td width="320"><font size=2>もう一度、ソニック達と冒険（アドベンチャー）に出かけよう！</font></td>
+        <td width="320"><font size=2>You've got to experience Sonic reborn in English</font></td>
+        <td width="320"><font size=2>Let's go on another adventure with Sonic and his friends!</font></td>
       </tr>
       <tr> 
         <td width="320"><img src="list.jpg"></td>
         <td width="320"><img src="text.jpg"></td>
       </tr>
       <tr> 
-        <td width="320"><font size=2>エンブレムリスト表示。全130個のエンブレム取得状態がリストでわかる！ </font></td>
-        <td width="320"><font size=2>もちろんボイスと字幕は組み合わせ自由。語学の勉強に使えるかも？</font></td>
+        <td width="320"><font size=2>Emblem list display. The list shows you the status of all 130 emblems you've acquired!</font></td>
+        <td width="320"><font size=2>Of course, voices and subtitles can be combined freely. Maybe you can use it for language study?</font></td>
     </table>
     <table width="640">
       <tr>
@@ -104,13 +103,13 @@
       </tr>
       <tr> 
         <td align="center"> 
-          <p> <a href="http://www.sonicteam.com/" target="_top"><font size="4"><b><font size="3">ＢＡＣＫ</font></b></font></a></td>
+          <p> <a href="/index.html" target="_top"><font size="4"><b><font size="3">Back</font></b></font></a></td>
       <tr>
         <td height=16 colspan=2></td>
       </tr>
       <tr>
         <td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff"> 
-          ｜　Presented By 　<b>SONIC TEAM 1999</b>　｜ </font></td>
+          | Presented By <b>SONIC TEAM 1999</b> | </font></td>
       </tr>
     </table>
   </div>
