--- a/sonichq/games/index.html
+++ b/sonichq/games/index.html
@@ -116,14 +116,15 @@ document.write('<body bgcolor=000000 text=' + textcolor + ' link=' + linkcolor +
 <p>This problem does not affect earlier versions of Netscape.  If you have Netscape 4+ and can't finish loading the page, turn Javascript on.
 </noscript>
 
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011205000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
 
 
 <p><center>
@@ -164,7 +165,7 @@ document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=t
 // -->
 </script>
 
-<p><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="/sonichq/scripts/counter/7.gif" WIDTH=15 HEIGHT=20 ALT="7"><IMG SRC="/sonichq/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><BR>
+<p><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="/sonichq/scripts/counter/3.gif" WIDTH=15 HEIGHT=20 ALT="3"><IMG SRC="/sonichq/scripts/counter/7.gif" WIDTH=15 HEIGHT=20 ALT="7"><BR>
 <FONT SIZE=0>hits as of April 11, 1999</FONT>
 
 <!script language="JavaScript">
@@ -495,13 +496,13 @@ document.write('<table width=100% ' + tablebg + ' border=1 ' + bordersettings + 
 
 <tr><td valign=top>
 
-<p><font style=font-family:Verdana face=Verdana size=-1><b>Copyrights for Sega Games and materials belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com/" target="_whole">Service Games, Inc</a>.</b> Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com; freddyg@sprynet.com; sonicscene@ign.com">Jonathan "WB" Gray, Vector, and Tristan</a>.
+<p><font style=font-family:Verdana face=Verdana size=-1><b>Copyrights for Sega Games and materials belong to <a href="https://web.archive.org/20011205000000/http://www.sega.com/" target="_whole">Service Games, Inc</a>.</b> Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com; freddyg@sprynet.com; sonicscene@ign.com">Jonathan "WB" Gray, Vector, and Tristan</a>.
 
 <p>If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hard work to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. For any publication besides the web, please write for permission first. All original material on this site is copyright © 1996-1998 Sonic HQ.
 
 <p>SPECIAL SPECIAL THANKS to Ray, Bo Bayles, Green Gibbon, Martin Braid, Kedzie-K, and Popcorn. Thanks IMMENSELY for all your help!</font>
 
-<P ALIGN=CENTER><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/" target=whole><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/selogo.gif" HEIGHT=40 WIDTH=40 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&page=01" target=whole><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichqgames&page=01" HEIGHT=40 WIDTH=400 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><BR><SMALL><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/" target=whole>Sonic Exchange - Sonic The Hedgehog Banner Exchange!</A></SMALL></P>
+<P ALIGN=CENTER><A HREF="https://web.archive.org/20011205000000/http://www.p-a-u-l.com/sonic/banex/" target=whole><IMG SRC="https://web.archive.org/20011205000000/http://www.p-a-u-l.com/sonic/banex/selogo.gif" HEIGHT=40 WIDTH=40 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><A HREF="https://web.archive.org/20011205000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&page=01" target=whole><IMG SRC="https://web.archive.org/20011205000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichqgames&page=01" HEIGHT=40 WIDTH=400 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><BR><SMALL><A HREF="https://web.archive.org/20011205000000/http://www.p-a-u-l.com/sonic/banex/" target=whole>Sonic Exchange - Sonic The Hedgehog Banner Exchange!</A></SMALL></P>
 
 </td></tr></table>
 
