--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <TITLE>TobinnSite</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
+<link rel="icon" href="favicon.gif">
+<link rel="icon" href="favicon.jpg">
+<link rel="icon" href="favicon.png">
+<link rel="icon" href="favicon.svg">
+<!--ICO, GIF, JPEG, PNG, SVG-->
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </HEAD>
 
