--- a/sonichq/games/index/championship/index.html
+++ b/sonichq/games/index/championship/index.html
@@ -12,11 +12,22 @@ A{text-decoration:none} -->
 </head>
 
 <body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
-&nbsp;
 
 <br>
 
-<span class=pathlinks><table class=glow>
+<center>
+<IFRAME SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011205000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+</NOSCRIPT>
+</IFRAME>
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011205000000/http://ads.ad-flow.com/?DC=ztnet-pop1&JS=Y"></SCRIPT>
+</center>
+
+<p><span class=pathlinks><table class=glow>
 <a href=/sonichq/>Sonic HQ</a> | <a href=/sonichq/games/>Gaming Info</a> | <a href=/sonichq/games/index/>Game List</a> | Sonic Championship (Sonic The Fighters) - Arcade</table></span>
 
 <center>
@@ -138,7 +149,7 @@ alt="Sonic Championship"></center>
 
 <div id=table0 align=center>
 
-<a name=anchor0><p><img src=/sonichq/images/bluebar.jpg><p></a>
+<a name=anchor0><p><img src=/sonichq/images/borders/bluebar.jpg><p></a>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=70% height=20><tr>
 <td><img src=/sonichq/images/borders/topleft.gif></td>
@@ -179,7 +190,7 @@ Death Egg Zone - Robotniks Hangar (Eggman)<br><br></div></font></td></tr></table
 
 </div><div id=table1 align=center>
 
-<a name=anchor1><p><img src=/sonichq/images/bluebar.jpg><p></a>
+<a name=anchor1><p><img src=/sonichq/images/borders/bluebar.jpg><p></a>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=70% height=20><tr>
 <td><img src=/sonichq/images/borders/topleft.gif></td>
